--- a/style.css
+++ b/style.css
@@ -116,3 +116,32 @@ body {
   font-size: 32px;
   color: var(--branco-principal);
 }
+
+.rodape {
+  text-align: center;
+  margin-trim: 5em 3em;
+}
+
+.rodape__lista {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin-top: 1em;
+}
+
+.lista__link {
+  text-decoration: none;
+  color: var(--branco-principal);
+  margin-left: 1em;
+}
+
+a {
+  text-decoration: none;
+  color: var(--branco-principal);
+}
+
+.rodape__texto {
+  font-size: 14px;
+  color: var(--cinza-secundario);
+  margin: 1em 0;
+}
